add get rateditemsbyuserid and getuserbyname
